# fast_api_practik

./: README.md  pyproject.toml
app/: log.txt  main.py  utils.py
app/models/: models.py
app/routers/: users.py
