[tool.poetry]
name = "fast-api-practik"
version = "0.1.0"
description = ""
authors = ["Arsen Grigoryan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.112.0"}
uvicorn = {extras = ["standart"], version = "^0.30.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
